--- a/ECE568-lab2/Makefile
+++ b/ECE568-lab2/Makefile
@@ -12,11 +12,11 @@ targets := client server
 default: all
 all: $(targets)
 
-client: client.o
-	$(CC) $(LDFLAGS) -o client client.o
+client: client.o util.o
+	$(CC) $(LDFLAGS) -o client  client.o util.o
 
 server: server.o
-	$(CC) $(LDFLAGS) -o server server.o
+	$(CC) $(LDFLAGS) -o server  server.o util.o
 
 
 client.o: client.c
@@ -24,6 +24,9 @@ client.o: client.c
 
 server.o: server.c
 	$(CC) $(CFLAGS) -c -o server.o  server.c
+
+util.o: util.c
+	$(CC) $(CFLAGS) -c -o util.o util.c
 
 clean:
 	$(RM) $(targets) $(sources:.c=.o) *~
